Fix spacing between contrast messages and add profile pic to every recieved message

--- a/styles/ChatApp.module.css
+++ b/styles/ChatApp.module.css
@@ -87,11 +87,3 @@
   .sendIcon {
     user-select: none;
   }
-
-  
-.blackProfile {
-  width: 60px;
-  height: 60px;
-  background-color: black;
-  border-radius: 50%;
-}
