--- a/styles/ChatText.module.css
+++ b/styles/ChatText.module.css
@@ -1,10 +1,18 @@
 .container {
     width: 500px;
     overflow-y: auto;
-    height: 71vh;
+    height: 68vh;
     position: relative;
     display: flex;
     flex-direction: column;
+    margin: 5px 0;
+}
+
+.chatProfile {
+    position: relative;
+    bottom: 33px;
+    right: 2px;
+    height: 0;
 }
 
 .myMessage {
@@ -15,7 +23,7 @@
     color: white;
     font-weight: bold;
     left: 110px;
-    margin: 5px 0;
+    margin: 2px 0;
     font-size: 14px;
     position: relative;
 }
@@ -29,7 +37,7 @@
     font-weight: bold;
     position: relative;
     left: 30px;
-    margin: 5px 0;
+    margin: 2px 0;
     font-size: 14px;
 }
 
@@ -39,3 +47,4 @@
     font-size: 10px;
     width: 140px;
 }
+
