--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -58,12 +58,6 @@
   flex: 1;
 }
 
-.blackProfile {
-  width: 60px;
-  height: 60px;
-  background-color: black;
-  border-radius: 50%;
-}
 
 .footer {
   display: flex;
